sass/main.scss
/* ... */
.quilt-wrap .lazy-load {
  display: inline-block;
  overflow: hidden;
}

/* ===== artwork.js STYLES ===== */

.artwork #map {
  position: relative;
  left: 0;
  width: 65%;
  height: calc(100vh - 4em);
  z-index: 1000;
}
.artwork .sticky #map {
  width: 100%;
  height: 100%;
}
.artwork #map .imageStatus {
  position: absolute;
  bottom: 3em;
  width: 100%;
  text-align: center;
  padding: 0 20%;
}

.artwork .info {
  position: absolute;
  width: 35%;
  background: #fff;
  min-height: calc(100% - 4em);
  padding: 1em 2em;
  right: 0;
  overflow-y:scroll;
  min-height: 100vh;
}
.artwork .objects-focus {
  border-top: none;
  float: none;
  padding-top: 0;
}
.artwork .objects-focus .artwork-image {
  display: none;
}

.objects-focus div > p {
  margin-bottom: 1em;
  width:75%;
}

.objects-focus span {
  font-style: normal;
}
.artwork-detail{
    display:table;
    font-size:smaller;
    line-height:1.3em;
}
.detail-row{
    display:table-row;
}
.detail-title{
    display:table-cell;
    padding:5px 0;
    font-family: $MiaGroteskRegular, sans-serif;
}
.detail-content{
    display:table-cell;
    padding:5px 5px 5px 15px;
}
h5.details-title {
    border-top:3px solid $primary;
    margin-top:1em;
    margin-bottom:0.5em;
    padding-top:3px;
    cursor:pointer;
    font-size: 1.5em;
}
.explore{
  display: inline-block;
}
.explore a {
  font-size:1.1em;
  color: #ffffff;
  font-family: $MiaGroteskBold, sans-serif;
  position: absolute;
  bottom:10px;
  left: 10px;
}
.newsflash i, .artstory i, .explore-content i{
  font-size:1.5em;
  color: #ffffff;
  position: absolute;
  bottom:11px;
  right: 10px;
}
.explore a sub{
  font-size:1.1em;
  color: #ffffff;
  font-family: $MiaGroteskLight, sans-serif;
}
.audioClip a, .audioClip a sub {
  position: relative;
  color: #232323;
  display: inline-block;
  top: 0;
}
.audioClip a {
  top: 13px;
}
.newsflash, .artstory, .explore-content {
  display: inline-block;
  width: 175px;
  height: 175px;
  float: left;
  margin:20px 10px 0 0;
  background-size: cover;
  position: relative;
}
.audioClip{
  width: 100%;
  float: none;
  clear: both;
  background-image: none;
}
.objects-page-link{
    font-size:8px;
    text-transform: uppercase;
    text-align:center;
    width:32px;
    position:absolute;
    top:50px;
    right:10px;
    line-height:1em;
    font-family: $MiaGroteskBold;
    color: #222;
}

.objects-page-icon{
    border:3px solid $primary;
    border-radius: 5px;
    background-image:url('../images/ic_remove_red_eye_black_24px.svg');
    width:32px;
    height:32px;
    color:$primary;
    background-size:cover;
    margin-bottom:3px;
    cursor: hand;
 }

 .peek a {
   color: $primary;
 }

button.material-icons {
  background: none;
  cursor: pointer;
  font-size: 1.5em;
  color: #fff;
  border: none;
  margin: 0px;
  padding: 0px;
  font-weight: bold;
}

button.material-icons.search {
  padding: 2em 0 2em 2em;
  margin: -2em 0 -2em -2em;
}
/* ===== page.js STYLES ===== */

.page{}
.pageText{margin:2em;max-width:38em;}
.pageText h1{
    font-size: 1.75em;
    width: 100%;
    text-align: left;
    margin: 0;
    line-height: 1em;
}
.pageText h2{
    font-size: 1.25em;
    width: 100%;
    text-align: left;
    margin: 0;
    margin-top:2em;
    line-height: 1em;
    border-top:3px solid $primary;
    padding-top:5px;
}
.pageText h3{
    font-size: .85em;
    width: 100%;
    text-align: left;
    margin: 0;
    margin-top:2em;
    line-height: 1em;
    font-family: $MiaGroteskBold, sans-serif;
    border-top:1px solid $primary;
    padding-top:5px;
}

.pageText p{line-height: 1.4em;margin:0.5em 0;}

/* ===== info links homepage STYLES ===== */

ul.info {margin:0 1.5em;width:100%;margin-bottom:2em;}

.info li{display:inline-block;}
.info li a{
    padding:7px 0;
    width:100%;
    display:block;
    border-top:3px solid $primary;
    font-family: $MiaGroteskBold, sans-serif;
    font-size:1.5em;
    color:$primary;
    -webkit-transition: all 150ms linear;
    -moz-transition: all 150ms linear;
    -ms-transition: all 150ms linear;
    -o-transition: all 150ms linear;
    transition: all 150ms linear;
}
.info li a:hover, .departmentLink:hover h2{
    background-color:$primary;
    color:white;
    padding-left:10px;
}
.info li:last-child a{padding-right:0;}

@media screen and (max-width: 768px) {
  .objects-focus div > p, .objects-focus .tombstone {
    width:100%;
  }
}

